--- a/main.html
+++ b/main.html
@@ -7,6 +7,23 @@
 </head>
 
 <body>
+	<div style="background-color: rgb(204, 204, 204)">
+		<h1 style="text-align: center">
+			My Playlist
+		</h1>
+		<ul>
+			<li><a href="" target="_blank">Song 1</a></li>
+			<li><a href="" target="_blank">Song 2</a></li>
+			<li><a href="" target="_blank">Song 3</a></li>
+			<li><a href="" target="_blank">Song 4</a></li>
+			<li><a href="" target="_blank">Song 5</a></li>
+		</ul>
+		<h2 style="text-align: center">Now Playing...</h2>
+		<video style="background-color: rgb(255, 255, 255); padding: 10px; border-radius: 5px; display: flex;  justify-content: center;" src="https://www.w3schools.com/tags/movie.mp4" controls></video>
+		<h2 style="text-align: center">MP3 songs</h2>
+		<audio style="background-color: rgb(255, 255, 255); padding; border-radius: 5px;" src="https://www.pagalworld.com.se/files/download/id/64630" controls></audio>
+		
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
