--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
 		<h1 style="text-align: center">
 			My Playlist
 		</h1>
-		<ul>
-			<li><a href="" target="_blank">Song 1</a></li>
-			<li><a href="" target="_blank">Song 2</a></li>
-			<li><a href="" target="_blank">Song 3</a></li>
-			<li><a href="" target="_blank">Song 4</a></li>
-			<li><a href="" target="_blank">Song 5</a></li>
+		<ul style="border: 2px solid black; border-radius: 5px; background-color: white; margin: 25px; padding: 10px 20px; list-style: none;">
+			<li><a href="" target="_blank" style="text-decoration: none; color: black">Song 1</a></li>
+			<li><a href="" target="_blank" style="text-decoration: none; color: black">Song 2</a></li>
+			<li><a href="" target="_blank" style="text-decoration: none; color: black">Song 3</a></li>
+			<li><a href="" target="_blank" style="text-decoration: none; color: black">Song 4</a></li>
+			<li><a href="" target="_blank" style="text-decoration: none; color: black">Song 5</a></li>
 		</ul>
 		<h2 style="text-align: center">Now Playing...</h2>
 		<video style="background-color: rgb(255, 255, 255); padding: 10px; border-radius: 5px; display: flex;  justify-content: center;" src="https://www.w3schools.com/tags/movie.mp4" controls></video>
