--- a/main.html
+++ b/main.html
@@ -19,10 +19,17 @@
 			<li><a href="" target="_blank" style="text-decoration: none; color: black">Song 5</a></li>
 		</ul>
 		<h2 style="text-align: center">Now Playing...</h2>
+		<div style="background-color: white; border: 2px solid black; margin: 0 80px; border-radius: 5px;">
+		<div style="display: flex; justify-content: center">
 		<video style="background-color: rgb(255, 255, 255); padding: 10px; border-radius: 5px; display: flex;  justify-content: center;" src="https://www.w3schools.com/tags/movie.mp4" controls></video>
-		<h2 style="text-align: center">MP3 songs</h2>
-		<audio style="background-color: rgb(255, 255, 255); padding; border-radius: 5px;" src="https://www.pagalworld.com.se/files/download/id/64630" controls></audio>
+		</div>
 		
+			<h2 style="text-align: center">MP3 songs</h2>
+		
+		<div style="display: flex; justify-content: center">
+		<audio style="background-color: rgb(255, 255, 255); padding; border-radius: 5px;" src="https://www.pagalworld.com.se/files/download/id/64630" controls></audio>
+		</div>
+		</div>
 	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
